--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -37,8 +37,8 @@ jobs:
     - build
     runs-on: ubuntu-latest
     environment:
-      name: pypi
-      url: https://pypi.org/p/<package-name>  # Replace <package-name> with your PyPI project name
+      name: GreenWorks
+      url: https://pypi.org/p/GreenWorks
     permissions:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
 
@@ -59,7 +59,7 @@ jobs:
 
     environment:
       name: testpypi
-      url: https://test.pypi.org/p/<package-name>
+      url: https://test.pypi.org/p/GreenWorks
 
     permissions:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
