Edit environment name

--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -37,7 +37,7 @@ jobs:
     - build
     runs-on: ubuntu-latest
     environment:
-      name: GreenWorks
+      name: GreenWorks_pypi
       url: https://pypi.org/p/GreenWorks
     permissions:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
